--- a/VAL LETTER.HTML
+++ b/VAL LETTER.HTML
@@ -74,6 +74,7 @@
       </footer>
     </article>
   </div>
-  <center> <button><a href="vidi.html">CLICK HERE TO SEE SOME MOMENTS SHARED TOGETHER</a></button></center> 
+<center> <button class="btn-primary">><a href="vidi.html">CLICK HERE TO SEE SOME MOMENTS SHARED TOGETHER</a></button></center>
 </body>
 </html>
+
