--- a/vidi.html
+++ b/vidi.html
@@ -72,7 +72,7 @@
         <h1>For Rahama Maltiti</h1>
         <p>Vals moments and memories — play, pause, and feel every beat</p>
       </div>
-      <div style="color:var(--muted);font-size:13px;">Made with love by Rafik</div>
+      <div style="color:var(--muted);font-size:13px;">Made with love by Rafik Musah</div>
     </header>
 
     <section class="grid" id="gallery">
@@ -385,3 +385,4 @@
   </script>
 </body>
 </html>
+
