--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body>
 
     <div class="container">
-        <img src="LOVE.jpg" alt="Cute Owl">
+        <img src="love.jpg" alt="Cute Owl">
         
         <h1 id="question">RAHAMA MALTITI, will you be my valentine?</h1>
         
@@ -112,4 +112,5 @@
 
 </body>
 </html>
+
 
