--- a/vidi.html
+++ b/vidi.html
@@ -257,7 +257,7 @@
         </div>
       </article>
 
-      <article class="card" data-title="Vals 2 — Rainy Night" data-src="WhatsApp Video 2026-02-05 at 02.15.07.mp4">
+      <article class="card" data-title="Vals 2 — Rainy Night" data-src="C:\Users\Admin\Desktop\VID-20260206-WA0065.mp4">
         <div class="thumb">
           <video muted playsinline preload="metadata" poster="thumbs/vals2.jpg">
             <source src="videos/vals2.mp4" type="video/mp4">
@@ -267,8 +267,8 @@
           </div>
         </div>
         <div class="meta">
-          <h3>Vals 13 — On A Date</h3>
-          <p>Don't be shy remove the mask.</p>
+          <h3>Vals 13 — Movie</h3>
+          <p>Let's watch together.</p>
         </div>
       </article>
 
@@ -385,4 +385,5 @@
   </script>
 </body>
 </html>
+
 
