--- a/vidi.html
+++ b/vidi.html
@@ -282,7 +282,7 @@
           </div>
         </div>
         <div class="meta">
-          <h3>Vals 14 — Camra Woman</h3>
+          <h3>Vals 14 — Camera Woman</h3>
           <p>Keep picturing me in a good way always.</p>
         </div>
       </article>
@@ -297,7 +297,7 @@
           </div>
         </div>
         <div class="meta">
-          <h3>Vals 15 — Feed Up </h3>
+          <h3>Vals 15 — Fed Up </h3>
           <p>Don't be stressed i got you always.</p>
         </div>
       </article>
@@ -385,5 +385,6 @@
   </script>
 </body>
 </html>
+
 
 
